# 2A202600674-Bui_Van_Thai-Day26

./: .gitignore  README.md  requirements.txt
01-function-calling/: README.md  weather_function_calling.py
02-mcp-basics/: README.md  weather_client.py  weather_server.py
03-production/: README.md  auth_client.py  auth_server.py  registry.json  registry_client.py  versioned_client.py  versioned_server.py
04-lab/: README.md
04-lab/mcp-client/: README.md  pyproject.toml  verify_setup.py
04-lab/mcp-client/weather_agent/: __init__.py  agent.py
04-lab/mcp-server/: Dockerfile  pyproject.toml  weather.py
