[project]
name = "mcp-client"
version = "0.1.0"
description = "Weather Agent using Google ADK with remote MCP server on Cloud Run"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",
    "google-generativeai>=0.8.0",
    "mcp>=1.17.0",
    "fastmcp>=2.12.4",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
]
